# creative-engine

./: .gitignore  .travis.yml  Brewfile  CMakeLists.txt  CreativeEngine.cmake  Jenkinsfile  LICENSE  README.md  Vagrantfile  component.mk
.ci_files/: Jenkinsfile
cmake.files/: FindBoost.cmake  FindSDL2.cmake  FindSDL2_image.cmake
examples/: .gitignore  create.sh
examples/fonts/: CMakeLists.txt  Makefile  partitions.csv  sdkconfig.linux  sdkconfig.osx
examples/fonts/src/: GGame.h  GGameState.cpp  GGameState.h  GSplashState.cpp  Game.h  Resources.r  component.mk  main.cpp
examples/template/: CMakeLists.txt  Makefile
examples/template/src/: GGame.cpp  GGameState.cpp  GResources.h  GSplashState.cpp  GSplashState.h  component.mk  main.cpp
include/: BAnimSprite.h  BBase.h  BBitmap.h  BGameEngine.h  BList.h  BPlayfield.h  BProcess.h  BSprite.h  BViewPort.h  Display.h
lib/: BGameEngine.cpp  BPlayfield.cpp  BProcess.cpp  BSoundPlayer.cpp  BSprite.cpp  BTypes.cpp  BViewPort.cpp  Controls.cpp  Panic.cpp
scripts/: Dockerfile  README.md  build.sh  common.sh  docker-build.sh  docker-install-debian-prerequisites.sh  env.sh
scripts/git-scripts/: README.md  genus-new-branch.sh  genus-update-masters.sh
src/: Audio.cpp  Audio.h  BAnimSprite.cpp  BAnimSprite.h  BApplication.cpp  BApplication.h  BBase.cpp  BBase.h  BBitmap.cpp  BBitmap.h  BEvents.cpp  BEvents.h  BFont.cpp  BFont.h  BGameEngine.cpp  BGameEngine.h  BList.cpp  BList.h  BMapPlayfield.cpp  BMapPlayfield.h  BMemoryStream.cpp  BMemoryStream.h  BPlayfield.cpp  BPlayfield.h  BProcess.cpp  BProcess.h  BResourceManager.cpp  BResourceManager.h  BSoundEngine.cpp  BSoundEngine.h  BSoundPlayer.cpp  BSoundPlayer.h  BSprite.cpp  BSprite.h  BSpriteSheet.cpp  BSpriteSheet.h  BStore.cpp  BStore.h  BTileMap.cpp  BTileMap.h  (+15 more)
src/Audio/: Audio.cpp  Audio.h  AudioBase.cpp  AudioBase.h
src/Audio/LDKAudio/: LDKAudio.cpp  LDKAudio.h
src/Audio/OdroidAudio/: OdroidAudio.cpp  OdroidAudio.h
src/Audio/SDL2Audio/: SDL2Audio.h
src/Audio/mixer/: Audio_Mixer.h  mixer.c  mixer.h
src/BStore/: BStore.cpp  BStore.h  BStoreBase.cpp  BStoreBase.h
src/BStore/DesktopStore/: DesktopStore.cpp  DesktopStore.h
src/BStore/OdroidStore/: OdroidStore.cpp  OdroidStore.h
src/Controls/: Controls.cpp  Controls.h  ControlsBase.cpp  ControlsBase.h
src/Controls/DesktopControls/: DesktopControls.cpp  DesktopControls.h
src/Controls/DirectLinuxControls/: DirectLinuxControls.cpp  DirectLinuxControls.h  axbtnmap.c  axbtnmap.h
src/Controls/LDKControls/: LDKControls.cpp  LDKControls.h
src/Controls/OdroidControls/: OdroidControls.cpp  OdroidControls.h
src/Display/: Display.cpp  Display.h  DisplayBase.cpp  DisplayBase.h  DisplayDefines.h
src/Display/DesktopDisplay/: DesktopDisplay.cpp  DesktopDisplay.h
src/Display/LDKDisplay/: LDKDisplay.cpp  LDKDisplay.h
src/Display/NetworkDisplay/: NetworkDisplay.cpp  NetworkDisplay.h  NetworkDisplayConfig.h  NetworkDisplay_orig.cpp  NetworkDisplay_orig.h  RemoteMatrixDisplay.cpp  RemoteMatrixDisplay.h  RemoteMatrixSegment.cpp  RemoteMatrixSegment.h  SDL2Display.h  SegmentClient.cpp  SegmentClient.h
src/Display/NetworkDisplay/ini/: INIReader.cpp  INIReader.h  ini.c  ini.h
src/Display/OdroidDisplay/: OdroidDisplay.cpp  OdroidDisplay.h
src/Types/: TBCD.cpp  TBCD.h  TNumber.h  TRGB.h  TRect.cpp  TRect.h
src/Widgets/: BButtonWidget.cpp  BButtonWidget.h  BContainerWidget.cpp  BContainerWidget.h  BDialogWidget.cpp  BDialogWidget.h  BMenuWidget.cpp  BMenuWidget.h  BNumberWidget.cpp  BNumberWidget.h  BSelectWidget.cpp  BSelectWidget.h  BSliderWidget.cpp  BSliderWidget.h  BWidget.cpp  BWidget.h  BWidgetTheme.cpp  BWidgetTheme.h  Widgets.h
src/libxmp/: README.md  common.h  component.mk  control.c  format.c  hio.c  load.c  load_helpers.c  memio.c  mixer.c  period.c  player.c  smix.c  tempfile.c  virtual.c  xmp.h
src/libxmp/loaders/: common.c  component.mk  iff.c  it_load.c  s3m_load.c  sample.c  xm_load.c
test/: CMakeCache.txt  Makefile  Resources.r  Test.h  cmake_install.cmake  main.cpp  test.cmake
test/resources/: GenusIcon.icns  Master Palette.pal  README.md  genus.pmp  info.plist
test/resources/music/: Song1.s3m
test/src/: GResources.h  Resources.h  Resources.r  main.cpp  test.h
test/src/resources/music/: EmptySong.xm
test/src/resources/tilemaps/256/: MAP_LAYER.tsx  overworld.tmx  overworld.txt
test/src/resources/tilemaps/256/mutli-screen-map-wip/town/: beach.tsx  east-woods.tmx  north-woods-blade.tmx  north-woods.tmx  south-beach.tmx  town.tmx  town_MAP_LAYER.tsx  west-woods.tmx
test/src/resources/tilemaps/tilesets/: MAP_LAYER.json  MAP_LAYER.tsx  OBJECT_ATTRIBUTES_LAYER.tsx  OBJECT_LAYER.tsx  shared palette.pal
test/src/tests/: Lists.cpp  Sprites.cpp  test_001.cpp  test_002.cpp
tools/: CMakeLists.txt  Makefile  rcomp.cpp  tools.cmake
tools/rcomp-src/: BMPFile.cpp  BMPFile.h  CMakeLists.txt  LayerInfo.h  Makefile  RawBitmap.cpp  RawBitmap.h  RawFile.cpp  RawFile.h  ResourceFile.cpp  ResourceFile.h  SpriteSheet.cpp  SpriteSheet.h  TMX.cpp  TMX.h  TMXFile.cpp  TMXFile.h  TileMap.cpp  TileMap.h  TileMapBase.h  rcomp  rcomp.cpp  rcomp.h  run.sh  utils.cpp
tools/rcomp-src/lib/: BSymbolTable.cpp  BSymbolTable.h  RawBitmap.cpp  RawBitmap.h  utils.cpp  utils.h
tools/rcomp-src/tmx/: TMXLayer.cpp  TMXLayer.h  TMXMap.cpp  TMXMap.h  TMXTileSet.cpp  TMXTileSet.h
tools/strdump-src/: Makefile  stmdump.cpp
